--- a/hal/CMakeLists.txt
+++ b/hal/CMakeLists.txt
@@ -3,5 +3,5 @@
 
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/device)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/gpio)
-# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/pwm)
-# add_subdirectory(${CMAKE_CURRENT_LIST_DIR} / i2c)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/pwm)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/i2c)
