--- a/hal/i2c/CMakeLists.txt
+++ b/hal/i2c/CMakeLists.txt
@@ -9,10 +9,12 @@ set(headers_dir ${CMAKE_CURRENT_LIST_DIR}/include)
 set(sources
     ${sources_dir}/i2c_component.cpp
     ${sources_dir}/i2c_peripheral.cpp
+    ${sources_dir}/i2c_peripheral_exception.cpp
 )
 set(headers
     ${headers_dir}/i2c_component.hpp
     ${headers_dir}/i2c_peripheral.hpp
+    ${headers_dir}/i2c_peripheral_exception.hpp
 )
 
 add_library(${project_name} STATIC ${sources} ${headers})
@@ -23,3 +25,7 @@ set_target_properties(${project_name} PROPERTIES
 )
 
 target_include_directories(${project_name} PUBLIC ${robarm_dir})
+
+target_link_libraries(${project_name} LINK_PUBLIC
+    robarm_hal_device
+)
