Update .gitignore and vsnprinf()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Copyright (c) 2023 Robarm
 # All rights reserved
 
+set(CMAKE_C_COMPILER "tools/crosscompiler/arm-linux-gnueabihf-gcc")
+set(CMAKE_CXX_COMPILER "tools/crosscompiler/arm-linux-gnueabihf-g++")
+
 cmake_minimum_required(VERSION ${CMAKE_VERSION})
 project("Robotic Arm" C CXX)
 
