Refactoring main.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,5 @@ set(robarm_dir ${PROJECT_SOURCE_DIR})
 add_subdirectory(${robarm_dir}/hal)
 add_subdirectory(${robarm_dir}/module)
 add_subdirectory(${robarm_dir}/utils)
-#add_subdirectory(${robarm_dir}/main)
-add_subdirectory(${robarm_dir}/test)
+add_subdirectory(${robarm_dir}/main)
+# add_subdirectory(${robarm_dir}/test)
