--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,12 +3,12 @@
 
 set(project_name robarm_test)
 
-set(test_target i2c_test)
+set(test_target pwm)
 
 set(sources_dir ${CMAKE_CURRENT_LIST_DIR}/src)
 
 set(sources
-    ${sources_dir}/${test_target}.cpp
+    ${sources_dir}/${test_target}_test.cpp
 )
 
 set(robarm_executable robarm_test)
