--- a/module/CMakeLists.txt
+++ b/module/CMakeLists.txt
@@ -5,4 +5,4 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/led)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/button)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/motor)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/accelerometer)
-# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/robotic_arm)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/roboticarm)
